# 5-spot

./: .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.chainguard  LICENSE  LICENSE.spdx  MAINTAINERS.md  Makefile  NOTICE  README.md  osv-scanner.toml
.cargo/: audit.toml
.claude/: CHANGELOG.md  CLAUDE.md  SKILL.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dco.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_question.yml
.github/actions/extract-version/: action.yml
.github/actions/prepare-docker-binaries/: action.yaml
.github/workflows/: build.yaml  calm-test.yaml  calm.yaml  docs.yaml  fuzz.yaml  main.yaml  pr.yaml  release.yaml  sast.yaml  scorecard.yaml
.vex/: CVE-2010-4756.toml  CVE-2018-20796.toml  CVE-2019-1010022.toml  CVE-2019-1010023.toml  CVE-2019-1010024.toml  CVE-2019-1010025.toml  CVE-2019-9192.toml  CVE-2026-27171.toml  CVE-2026-4046.toml  CVE-2026-4437.toml  CVE-2026-4438.toml  CVE-2026-5358.toml  CVE-2026-5450.toml  CVE-2026-5928.toml  GHSA-cq8v-f236-94qc.toml  README.md
deploy/admission/: validatingadmissionpolicy.yaml  validatingadmissionpolicybinding.yaml
deploy/crds/: scheduledmachine.yaml
deploy/deployment/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
deploy/deployment/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
deploy/monitoring/: servicemonitor.yaml
deploy/node-agent/: daemonset.yaml  kustomization.yaml  rbac.yaml  reclaim.toml.example
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/architecture/calm/: architecture.json
docs/reference/: api.md
docs/roadmaps/: project-roadmap-2026.md
docs/src/: changelog.md  index.md  license.md
docs/src/advanced/: capi-integration.md  ha.md  resource-distribution.md
docs/src/concepts/: architecture.md  emergency-reclaim.md  index.md  machine-lifecycle.md  scheduled-machine.md  schedules.md
docs/src/development/: building.md  contributing.md  setup.md  testing.md
docs/src/installation/: controller.md  crds.md  prerequisites.md  quickstart.md
docs/src/javascripts/: mermaid-init.js
docs/src/operations/: configuration.md  monitoring.md  multi-instance.md  troubleshooting.md
docs/src/reference/: api.md  cli.md
docs/src/security/: admission-validation.md  index.md  threat-model.md
docs/src/stylesheets/: extra.css
examples/: scheduledmachine-basic.yaml  scheduledmachine-weekend.yaml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_day_ranges.rs  parse_duration.rs  parse_hour_ranges.rs
src/: constants.rs  crd.rs  crd_tests.rs  health.rs  health_tests.rs  labels.rs  lib.rs  main.rs  main_tests.rs  metrics.rs  metrics_tests.rs  reclaim_agent.rs  reclaim_agent_tests.rs
src/reconcilers/: helpers.rs  helpers_tests.rs  mod.rs  scheduled_machine.rs  scheduled_machine_tests.rs
tools/: assemble_openvex.py  validate_vex.py
tools/tests/: assemble-openvex-tests.sh  validate-vex-tests.sh
tools/tests/fixtures/duplicate-ghsa/: GHSA-cq8v-f236-94qc-dup.toml  GHSA-cq8v-f236-94qc.toml
tools/tests/fixtures/invalid-ghsa-format/: GHSA-bad.toml
tools/tests/fixtures/invalid-rustsec-format/: RUSTSEC-bad.toml
tools/tests/fixtures/valid-ghsa/: GHSA-cq8v-f236-94qc.toml
tools/tests/fixtures/valid-rustsec/: RUSTSEC-2026-0097.toml
