[package]
name = "five_spot"
version = "0.1.1"
edition = "2021"
rust-version = "1.90"
authors = ["Erick Bourgeois<erick.bourgeois@rbccm.com>"]
description = "A cloud-native Kubernetes controller for managing machine scheduling on physical nodes"
license = "Apache-2.0"
repository = "https://github.com/RBC/5-spot"

[[bin]]
name = "5spot"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "crddoc"
path = "src/bin/crddoc.rs"

[[bin]]
name = "auto-vex-presence"
path = "src/bin/auto_vex_presence.rs"

[dependencies]
kube = { version = "3.1", features = ["runtime", "derive", "client", "ws"] }
kube-lease-manager = "0.11"
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
schemars = "1"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
prometheus = { version = "0.14", features = ["process"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
regex = "1"
lazy_static = "1.5"
warp = "0.3"
toml = "0.8"

[[bin]]
name = "5spot-reclaim-agent"
path = "src/bin/reclaim_agent.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
test-log = "0.2"
tempfile = "3"
tower-test = "0.4"
http = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
